<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PedidosViews.PedidosActivity">

    <Button
        android:id="@+id/btnUltimaPizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:onClick="onMenuPedidoBtnCliked"
        android:text="@string/btnUltimaPizza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPedidosAtuGusto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onMenuPedidoBtnCliked"
        android:text="@string/btnPedidosAtuGusto"
        app:layout_constraintBottom_toTopOf="@+id/btnPedidosPredeterminadas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUltimaPizza"
        app:layout_constraintVertical_bias="0.497" />

    <Button
        android:id="@+id/btnPedidosPredeterminadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="172dp"
        android:onClick="onMenuPedidoBtnCliked"
        android:text="@string/btnPedidosPredeterminadas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>